# gnumed

./: .gitignore  CHANGELOG  README.md  create-tag.sh  get-changelog.sh  get-gnumed-anon.sh  get-gnumed-user.sh  git-tidy_up.sh  git-tidy_up_repo  gm-maintenance_release_mail-template.txt  gm-mirror_vcs  gm-release_mail-template.txt  gm-sync_two_dirs.sh  remove-debris.sh  update_tree.sh
gmIdentity/: identity.java
gnumed/: .cvsignore  .gitignore  AUTHORS.timeline  CHANGELOG  CODINGSTYLE  COPYING.TangoDesktopProject  COPYING.timeline.icons  INSTALL  LICENSE  MANIFEST.in  README  README.timeline  TODO  check-prerequisites.py  check-prerequisites.sh  create-tag.sh  diff_tree.sh  get-branch-user.sh  get-changelog.sh  get-gnumed-anon.sh  get-gnumed-user.sh  gm-mirror_vcs  remove_pyc.sh  setup.py  update_tree.sh
gnumed/gnumed/: MANIFEST.in  setup.py
gnumed/gnumed/appgen/: requirement.txt
gnumed/gnumed/client/: 42-py2-wxp4  alter_allergy.sql  aust_vaccination.sql  gm  gm-0_1-from-cvs.sh  gm-0_1.conf  gm-0_2-from-cvs.sh  gm-0_2.conf  gm-0_3-from-cvs.sh  gm-0_3.conf  gm-Medica2004-from-cvs.sh  gm-Medica2004.conf  gm-doc-viewer.conf  (+22 more)
gnumed/gnumed/test-area/qt/kdevelop-example/homebusiness-0.1/homebusiness/: Containers.cpp  Containers.h  Customer.cpp  Customer.h  Makefile  Makefile.am  Makefile.in  application1.cpp  application1.h  datadef.sql  discountdialog.ui  discountdialog.ui.h  homebusiness.cpp  homebusiness.h  homebusinessdoc.cpp  homebusinessdoc.h  homebusinessview.cpp  homebusinessview.h  main.cpp  mergecustomerdialog.ui  mergecustomerdialog.ui.h  mergeproductdialog.ui  mergeproductdialog.ui.h  orderdetail.ui  orderdetail.ui.h  ordermain.ui  ordermain.ui.h  ordermainadapter.cpp  ordermainadapter.h  productdialog.ui  productdialog.ui.h  productoffer.ui  productoffer.ui.h  testprint.ps
(+4991 files in other folders)
